# ci_test

./: .editorconfig  CMakeLists.txt  vcpkg.txt
.github/workflows/: example  example.yml
src/: .clang-format  CMakeLists.txt  main.cpp
